--- a/angular.json
+++ b/angular.json
@@ -61,6 +61,62 @@
                   "maximumError": "10kb"
                 }
               ]
+            },
+            "acceptance": {
+              "fileReplacements": [
+                {
+                  "replace": "src/environments/environment.ts",
+                  "with": "src/environments/environment.acc.ts"
+                }
+              ],
+              "optimization": true,
+              "outputHashing": "all",
+              "sourceMap": false,
+              "extractCss": true,
+              "namedChunks": false,
+              "extractLicenses": true,
+              "vendorChunk": false,
+              "buildOptimizer": true,
+              "budgets": [
+                {
+                  "type": "initial",
+                  "maximumWarning": "2mb",
+                  "maximumError": "5mb"
+                },
+                {
+                  "type": "anyComponentStyle",
+                  "maximumWarning": "6kb",
+                  "maximumError": "10kb"
+                }
+              ]
+            },
+            "development": {
+              "fileReplacements": [
+                {
+                  "replace": "src/environments/environment.ts",
+                  "with": "src/environments/environment.dev.ts"
+                }
+              ],
+              "optimization": true,
+              "outputHashing": "all",
+              "sourceMap": true,
+              "extractCss": true,
+              "namedChunks": false,
+              "extractLicenses": true,
+              "vendorChunk": false,
+              "buildOptimizer": true,
+              "budgets": [
+                {
+                  "type": "initial",
+                  "maximumWarning": "2mb",
+                  "maximumError": "5mb"
+                },
+                {
+                  "type": "anyComponentStyle",
+                  "maximumWarning": "6kb",
+                  "maximumError": "10kb"
+                }
+              ]
             }
           }
         },
@@ -72,6 +128,12 @@
           "configurations": {
             "production": {
               "browserTarget": "mountain:build:production"
+            },
+            "acceptance": {
+              "browserTarget": "mountain:build:acceptance"
+            },
+            "development": {
+              "browserTarget": "mountain:build:development"
             }
           }
         },
@@ -120,6 +182,12 @@
           "configurations": {
             "production": {
               "devServerTarget": "mountain:serve:production"
+            },
+            "acceptance": {
+              "devServerTarget": "mountain:serve:acceptance"
+            },
+            "development": {
+              "devServerTarget": "mountain:serve:development"
             }
           }
         }
